# Tarea4ParadigmasCE

./: README.md
Tarea4ParadigmasCE/: README.md
Tarea4ParadigmasCE/ClienteC/: CMakeLists.txt  README_SDL_WINDOWS.md
Tarea4ParadigmasCE/ClienteC/include/: admin_ui.h  constants.h  game_state.h  json_parse.h  net.h  render.h  spectator_ui.h  sprites.h
Tarea4ParadigmasCE/ClienteC/src/: admin_main.c  admin_ui.c  game_state.c  json_parse.c  launcher.c  main.c  net.c  render.c  sdl_demo.c  spectator_main.c  spectator_ui.c
Tarea4ParadigmasCE/src/docs/javadoc/: Main.html  allclasses-index.html  allpackages-index.html  constant-values.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  package-summary.html  package-tree.html  search.html  type-search-index.js
Tarea4ParadigmasCE/src/docs/javadoc/entities/: Banana.html  Cocodrilo.html  CocodriloAzul.html  CocodriloRojo.html  Fruta.html  Mario.html  Naranja.html  package-summary.html  package-tree.html
Tarea4ParadigmasCE/src/docs/javadoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
Tarea4ParadigmasCE/src/docs/javadoc/model/: GameState.html  Liana.html  Posicion.html  package-summary.html  package-tree.html
Tarea4ParadigmasCE/src/docs/javadoc/network/: ClientHandler.html  package-summary.html  package-tree.html
Tarea4ParadigmasCE/src/docs/javadoc/patterns/factory/: CrocodileFactory.html  FruitFactory.html  GameObjectFactory.html  GameObjectFactoryImpl.html  package-summary.html  package-tree.html
Tarea4ParadigmasCE/src/docs/javadoc/patterns/observer/: GameObservable.html  Observable.html  Observer.html  package-summary.html  package-tree.html
Tarea4ParadigmasCE/src/docs/javadoc/patterns/strategy/: BlueCrocStrategy.html  MovementStrategy.html  RedCrocStrategy.html  package-summary.html  package-tree.html
Tarea4ParadigmasCE/src/docs/javadoc/server/: AdminConsole.html  GameManager.CommunicationMode.html  GameManager.html  GameServer.html  PlayerRegistry.html  PlayerSession.html  package-summary.html  package-tree.html
Tarea4ParadigmasCE/src/docs/javadoc/utils/: GameConstants.html  GameStateSerializer.html  TipoCocodrilo.html  TipoFruta.html  package-summary.html  package-tree.html
Tarea4ParadigmasCE/src/entities/: Banana.java  Cocodrilo.java  CocodriloAzul.java  CocodriloRojo.java  Fruta.java  Mario.java  Naranja.java
Tarea4ParadigmasCE/src/model/: GameState.java  Liana.java  Posicion.java  Tablero.java
Tarea4ParadigmasCE/src/network/: ClientHandler.java
Tarea4ParadigmasCE/src/patterns/factory/: CrocodileFactory.java  FruitFactory.java  GameObjectFactory.java  GameObjectFactoryImpl.java
Tarea4ParadigmasCE/src/patterns/observer/: GameObservable.java  Observable.java  Observer.java
Tarea4ParadigmasCE/src/patterns/strategy/: BlueCrocStrategy.java  MovementStrategy.java  RedCrocStrategy.java
Tarea4ParadigmasCE/src/server/: AdminConsole.java  GameManager.java  GameServer.java  PlayerRegistry.java  PlayerSession.java
Tarea4ParadigmasCE/src/utils/: GameConstants.java  GameStateSerializer.java  TipoCocodrilo.java  TipoFruta.java
